syntax="proto3";

package greet;
option go_package="greetpb";


message Greeting {
    string firstName =1;
    string lastName=2;
}

message GreetingRequest{
    Greeting greeting = 1;
}

message GreetingResponse{
    string result = 1;
}

service GreetService{
    // Unary rpc
    rpc Greet(GreetingRequest) returns (GreetingResponse){};

    // server side streaming(using the same GreetingRequest and GreetingResponse messages)
    rpc GreetManyTimes(GreetingRequest) returns (stream GreetingResponse){};

    // client side streaming(using the same GreetingRequest and GreetingResponse messages)
    rpc GreetManyPeopleOnce(stream GreetingRequest) returns (GreetingResponse){};

    // BiDirectional streaming
    rpc GreetEveryone(stream GreetingRequest) returns (stream GreetingResponse){};
    
    // Unary with Deadline
    rpc GreetWithDeadline(GreetingRequest) returns (GreetingResponse){};
}